cmake_minimum_required(VERSION 3.20)
project(airfx)

string(REGEX REPLACE "(.*)/" "" THIS_PACKAGE_NAME "${CMAKE_CURRENT_LIST_DIR}")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_OSX_ARCHITECTURES x86_64;arm64)

# Misc setup and subroutines
include(${CMAKE_CURRENT_LIST_DIR}/source/min-api/script/min-package.cmake)

set(C74_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/externals")

function(add_airfx_object category object_name)
    add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/source/objects/${category}/${object_name}")
endfunction()


add_airfx_object(ambience airfx.brightambience2_tilde)
add_airfx_object(ambience airfx.brightambience3_tilde)
add_airfx_object(ambience airfx.chorusensemble_tilde)
add_airfx_object(ambience airfx.clearcoat_tilde)
add_airfx_object(ambience airfx.doublelay_tilde)
add_airfx_object(ambience airfx.ensemble_tilde)
add_airfx_object(ambience airfx.hombre_tilde)
add_airfx_object(ambience airfx.kchamberar_tilde)
add_airfx_object(ambience airfx.melt_tilde)
add_airfx_object(ambience airfx.mv_tilde)
add_airfx_object(ambience airfx.mv2_tilde)
add_airfx_object(ambience airfx.pitchdelay_tilde)
add_airfx_object(ambience airfx.purestecho_tilde)
add_airfx_object(ambience airfx.sampledelay_tilde)
add_airfx_object(ambience airfx.starchild_tilde)
add_airfx_object(ambience airfx.starchild2_tilde)
add_airfx_object(ambience airfx.stereochorus_tilde)
add_airfx_object(ambience airfx.stereodoubler_tilde)
add_airfx_object(ambience airfx.stereoensemble_tilde)
add_airfx_object(ambience airfx.tapedelay_tilde)
add_airfx_object(ambience airfx.tapedelay2_tilde)
add_airfx_object(ambience airfx.triplespread_tilde)
add_airfx_object(amp-sims airfx.bassamp_tilde)
add_airfx_object(amp-sims airfx.bassdrive_tilde)
add_airfx_object(amp-sims airfx.bigamp_tilde)
add_airfx_object(amp-sims airfx.cabs_tilde)
add_airfx_object(amp-sims airfx.crickbass_tilde)
add_airfx_object(amp-sims airfx.fireamp_tilde)
add_airfx_object(amp-sims airfx.grindamp_tilde)
add_airfx_object(amp-sims airfx.leadamp_tilde)
add_airfx_object(amp-sims airfx.lilamp_tilde)
add_airfx_object(amp-sims airfx.midamp_tilde)
add_airfx_object(bass airfx.basskit_tilde)
add_airfx_object(bass airfx.dubcenter_tilde)
add_airfx_object(bass airfx.dubsub_tilde)
add_airfx_object(bass airfx.fathomfive_tilde)
add_airfx_object(bass airfx.floor_tilde)
add_airfx_object(bass airfx.hermepass_tilde)
add_airfx_object(bass airfx.infrasonic_tilde)
add_airfx_object(bass airfx.orbitkick_tilde)
add_airfx_object(biquads airfx.biquad_tilde)
add_airfx_object(biquads airfx.biquad2_tilde)
add_airfx_object(biquads airfx.biquaddouble_tilde)
add_airfx_object(biquads airfx.biquadnonlin_tilde)
add_airfx_object(biquads airfx.biquadonehalf_tilde)
add_airfx_object(biquads airfx.biquadplus_tilde)
add_airfx_object(biquads airfx.biquadtriple_tilde)
add_airfx_object(brightness airfx.acceleration_tilde)
add_airfx_object(brightness airfx.acceleration2_tilde)
add_airfx_object(brightness airfx.air_tilde)
add_airfx_object(brightness airfx.air2_tilde)
add_airfx_object(brightness airfx.air3_tilde)
add_airfx_object(brightness airfx.debess_tilde)
add_airfx_object(brightness airfx.deess_tilde)
add_airfx_object(brightness airfx.dehiss_tilde)
add_airfx_object(brightness airfx.everyslew_tilde)
add_airfx_object(brightness airfx.goldenslew_tilde)
add_airfx_object(brightness airfx.hypersonic_tilde)
add_airfx_object(brightness airfx.hypersonx_tilde)
add_airfx_object(brightness airfx.platinumslew_tilde)
add_airfx_object(brightness airfx.purestair_tilde)
add_airfx_object(brightness airfx.sinew_tilde)
add_airfx_object(brightness airfx.slew2_tilde)
add_airfx_object(brightness airfx.slew3_tilde)
add_airfx_object(brightness airfx.slewsonic_tilde)
add_airfx_object(brightness airfx.smooth_tilde)
add_airfx_object(brightness airfx.ultrasonic_tilde)
add_airfx_object(brightness airfx.ultrasoniclite_tilde)
add_airfx_object(brightness airfx.ultrasonicmed_tilde)
add_airfx_object(brightness airfx.ultrasonx_tilde)
add_airfx_object(clipping airfx.adclip7_tilde)
add_airfx_object(clipping airfx.adclip8_tilde)
add_airfx_object(clipping airfx.aquickvoiceclip_tilde)
add_airfx_object(clipping airfx.cliponly_tilde)
add_airfx_object(clipping airfx.cliponly2_tilde)
add_airfx_object(clipping airfx.clipsoftly_tilde)
add_airfx_object(clipping airfx.finalclip_tilde)
add_airfx_object(clipping airfx.onecornerclip_tilde)
add_airfx_object(distortion airfx.density_tilde)
add_airfx_object(distortion airfx.density2_tilde)
add_airfx_object(distortion airfx.dirt_tilde)
add_airfx_object(distortion airfx.distortion_tilde)
add_airfx_object(distortion airfx.drive_tilde)
add_airfx_object(distortion airfx.edge_tilde)
add_airfx_object(distortion airfx.hardvacuum_tilde)
add_airfx_object(distortion airfx.highimpact_tilde)
add_airfx_object(distortion airfx.loud_tilde)
add_airfx_object(distortion airfx.mackity_tilde)
add_airfx_object(distortion airfx.multibanddistortion_tilde)
add_airfx_object(distortion airfx.zoutputstage_tilde)
add_airfx_object(dithers airfx.beam_tilde)
add_airfx_object(dithers airfx.buildatpdf_tilde)
add_airfx_object(dithers airfx.dark_tilde)
add_airfx_object(dithers airfx.ditherbox_tilde)
add_airfx_object(dithers airfx.dithermediskers_tilde)
add_airfx_object(dithers airfx.dithermetimbers_tilde)
add_airfx_object(dithers airfx.doublepaul_tilde)
add_airfx_object(dithers airfx.highglossdither_tilde)
add_airfx_object(dithers airfx.naturalizedither_tilde)
add_airfx_object(dithers airfx.nodedither_tilde)
add_airfx_object(dithers airfx.notjustanothercd_tilde)
add_airfx_object(dithers airfx.notjustanotherdither_tilde)
add_airfx_object(dithers airfx.pauldither_tilde)
add_airfx_object(dithers airfx.paulwide_tilde)
add_airfx_object(dithers airfx.rawglitters_tilde)
add_airfx_object(dithers airfx.rawtimbers_tilde)
add_airfx_object(dithers airfx.spatializedither_tilde)
add_airfx_object(dithers airfx.studiotan_tilde)
add_airfx_object(dithers airfx.tapedither_tilde)
add_airfx_object(dithers airfx.tpdfdither_tilde)
add_airfx_object(dithers airfx.tpdfwide_tilde)
add_airfx_object(dithers airfx.vinyldither_tilde)
add_airfx_object(dynamics airfx.podcast_tilde)
add_airfx_object(dynamics airfx.podcastdeluxe_tilde)
add_airfx_object(dynamics airfx.digitalblack_tilde)
add_airfx_object(dynamics airfx.thunder_tilde)
add_airfx_object(dynamics airfx.pressure5_tilde)
add_airfx_object(dynamics airfx.pressure4_tilde)
add_airfx_object(dynamics airfx.logical4_tilde)
add_airfx_object(dynamics airfx.buttercomp_tilde)
add_airfx_object(dynamics airfx.surgetide_tilde)
add_airfx_object(dynamics airfx.gatelope_tilde)
add_airfx_object(dynamics airfx.compresaturator_tilde)
add_airfx_object(dynamics airfx.buttercomp2_tilde)
add_airfx_object(dynamics airfx.point_tilde)
add_airfx_object(dynamics airfx.drumslam_tilde)
add_airfx_object(dynamics airfx.dynamics_tilde)
add_airfx_object(dynamics airfx.recurve_tilde)
add_airfx_object(dynamics airfx.overheads_tilde)
add_airfx_object(dynamics airfx.pyewacket_tilde)
add_airfx_object(dynamics airfx.surge_tilde)
add_airfx_object(dynamics airfx.pop_tilde)
add_airfx_object(dynamics airfx.varimu_tilde)
add_airfx_object(dynamics airfx.brassrider_tilde)
add_airfx_object(dynamics airfx.purestsquish_tilde)
add_airfx_object(dynamics airfx.blockparty_tilde)
add_airfx_object(dynamics airfx.softgate_tilde)
add_airfx_object(dynamics airfx.swell_tilde)
add_airfx_object(dynamics airfx.curve_tilde)
add_airfx_object(dynamics airfx.pop2_tilde)
add_airfx_object(effects airfx.tremosquare_tilde)
add_airfx_object(effects airfx.powersag_tilde)
add_airfx_object(effects airfx.pitchnasty_tilde)
add_airfx_object(effects airfx.preponderant_tilde)
add_airfx_object(effects airfx.shortbuss_tilde)
add_airfx_object(effects airfx.nikola_tilde)
add_airfx_object(effects airfx.energy_tilde)
add_airfx_object(effects airfx.exciter_tilde)
add_airfx_object(effects airfx.powersag2_tilde)
add_airfx_object(effects airfx.guitarconditioner_tilde)
add_airfx_object(effects airfx.trianglizer_tilde)
add_airfx_object(effects airfx.galacticvibe_tilde)
add_airfx_object(effects airfx.tremolo_tilde)
add_airfx_object(effects airfx.energy2_tilde)
add_airfx_object(effects airfx.facet_tilde)
add_airfx_object(effects airfx.aura_tilde)
add_airfx_object(effects airfx.gringer_tilde)
add_airfx_object(effects airfx.fracture2_tilde)
add_airfx_object(effects airfx.fracture_tilde)
add_airfx_object(effects airfx.dubly_tilde)
add_airfx_object(effects airfx.glitchshifter_tilde)
add_airfx_object(effects airfx.cloudcoat_tilde)
add_airfx_object(filter airfx.mackeq_tilde)
add_airfx_object(filter airfx.hull2_tilde)
add_airfx_object(filter airfx.highpass_tilde)
add_airfx_object(filter airfx.tapefat_tilde)
add_airfx_object(filter airfx.holt2_tilde)
add_airfx_object(filter airfx.stonefire_tilde)
add_airfx_object(filter airfx.subtight_tilde)
add_airfx_object(filter airfx.average_tilde)
add_airfx_object(filter airfx.baxandall2_tilde)
add_airfx_object(filter airfx.capacitor2_tilde)
add_airfx_object(filter airfx.reseq_tilde)
add_airfx_object(filter airfx.baxandall_tilde)
add_airfx_object(filter airfx.highpass2_tilde)
add_airfx_object(filter airfx.avermatrix_tilde)
add_airfx_object(filter airfx.isolator2_tilde)
add_airfx_object(filter airfx.reseq2_tilde)
add_airfx_object(filter airfx.holt_tilde)
add_airfx_object(filter airfx.pear2_tilde)
add_airfx_object(filter airfx.distance_tilde)
add_airfx_object(filter airfx.eq_tilde)
add_airfx_object(filter airfx.weight_tilde)
add_airfx_object(filter airfx.capacitor_tilde)
add_airfx_object(filter airfx.distance3_tilde)
add_airfx_object(filter airfx.kalman_tilde)
add_airfx_object(filter airfx.pear_tilde)
add_airfx_object(filter airfx.cstrip2_tilde)
add_airfx_object(filter airfx.distance2_tilde)
add_airfx_object(filter airfx.toneslant_tilde)
add_airfx_object(filter airfx.hull_tilde)
add_airfx_object(filter airfx.lowpass2_tilde)
add_airfx_object(filter airfx.isolator_tilde)
add_airfx_object(filter airfx.lowpass_tilde)
add_airfx_object(lo-fi airfx.bitglitter_tilde)
add_airfx_object(lo-fi airfx.dustbunny_tilde)
add_airfx_object(lo-fi airfx.bite_tilde)
add_airfx_object(lo-fi airfx.chromeoxide_tilde)
add_airfx_object(lo-fi airfx.derez2_tilde)
add_airfx_object(lo-fi airfx.flutter_tilde)
add_airfx_object(lo-fi airfx.crunchygroovewear_tilde)
add_airfx_object(lo-fi airfx.groovewear_tilde)
add_airfx_object(lo-fi airfx.deckwrecka_tilde)
add_airfx_object(lo-fi airfx.vibrato_tilde)
add_airfx_object(lo-fi airfx.derez_tilde)
add_airfx_object(lo-fi airfx.pockey2_tilde)
add_airfx_object(lo-fi airfx.cojones_tilde)
add_airfx_object(lo-fi airfx.pockey_tilde)
add_airfx_object(noise airfx.silhouette_tilde)
add_airfx_object(noise airfx.voiceofthestarship_tilde)
add_airfx_object(noise airfx.tapedust_tilde)
add_airfx_object(noise airfx.electrohat_tilde)
add_airfx_object(noise airfx.texturize_tilde)
add_airfx_object(noise airfx.texturizems_tilde)
add_airfx_object(noise airfx.noise_tilde)
add_airfx_object(noise airfx.darknoise_tilde)
add_airfx_object(reverb airfx.verbity2_tilde)
add_airfx_object(reverb airfx.kcathedral_tilde)
add_airfx_object(reverb airfx.chamber_tilde)
add_airfx_object(reverb airfx.nonlinearspace_tilde)
add_airfx_object(reverb airfx.matrixverb_tilde)
add_airfx_object(reverb airfx.galactic_tilde)
add_airfx_object(reverb airfx.chamber2_tilde)
add_airfx_object(reverb airfx.galactic2_tilde)
add_airfx_object(reverb airfx.kcathedral2_tilde)
add_airfx_object(reverb airfx.reverb_tilde)
add_airfx_object(reverb airfx.verbity_tilde)
add_airfx_object(reverb airfx.kplated_tilde)
add_airfx_object(reverb airfx.infinity_tilde)
add_airfx_object(reverb airfx.kplateb_tilde)
add_airfx_object(reverb airfx.infinity2_tilde)
add_airfx_object(reverb airfx.kplatec_tilde)
add_airfx_object(reverb airfx.pocketverbs_tilde)
add_airfx_object(reverb airfx.kplatea_tilde)
add_airfx_object(saturation airfx.focus_tilde)
add_airfx_object(saturation airfx.ncseventeen_tilde)
add_airfx_object(saturation airfx.mojo_tilde)
add_airfx_object(saturation airfx.unbox_tilde)
add_airfx_object(saturation airfx.creature_tilde)
add_airfx_object(saturation airfx.tube2_tilde)
add_airfx_object(saturation airfx.huge_tilde)
add_airfx_object(saturation airfx.righteous4_tilde)
add_airfx_object(saturation airfx.tube_tilde)
add_airfx_object(saturation airfx.spiral2_tilde)
add_airfx_object(saturation airfx.purestdrive_tilde)
add_airfx_object(saturation airfx.dyno_tilde)
add_airfx_object(saturation airfx.desk4_tilde)
add_airfx_object(saturation airfx.spiral_tilde)
add_airfx_object(stereo airfx.srsly2_tilde)
add_airfx_object(stereo airfx.sidepass_tilde)
add_airfx_object(stereo airfx.wider_tilde)
add_airfx_object(stereo airfx.stereofx_tilde)
add_airfx_object(stereo airfx.sidedull_tilde)
add_airfx_object(stereo airfx.msfliptimer_tilde)
add_airfx_object(stereo airfx.srsly_tilde)
add_airfx_object(stereo airfx.lrfliptimer_tilde)
add_airfx_object(stereo airfx.tovinyl4_tilde)
add_airfx_object(stereo airfx.autopan_tilde)
add_airfx_object(subtlety airfx.sweeten_tilde)
add_airfx_object(subtlety airfx.purestwarm_tilde)
add_airfx_object(subtlety airfx.coils_tilde)
add_airfx_object(subtlety airfx.tubedesk_tilde)
add_airfx_object(subtlety airfx.desk_tilde)
add_airfx_object(subtlety airfx.hype_tilde)
add_airfx_object(subtlety airfx.shape_tilde)
add_airfx_object(subtlety airfx.singleendedtriode_tilde)
add_airfx_object(subtlety airfx.purestwarm2_tilde)
add_airfx_object(subtlety airfx.coils2_tilde)
add_airfx_object(subtlety airfx.interstage_tilde)
add_airfx_object(subtlety airfx.transdesk_tilde)
add_airfx_object(subtlety airfx.phasenudge_tilde)
add_airfx_object(subtlety airfx.discontinuity_tilde)
add_airfx_object(subtlety airfx.remap_tilde)
add_airfx_object(subtlety airfx.inflamer_tilde)
add_airfx_object(tape airfx.ironoxideclassic2_tilde)
add_airfx_object(tape airfx.totape5_tilde)
add_airfx_object(tape airfx.totape6_tilde)
add_airfx_object(tape airfx.tape_tilde)
add_airfx_object(tape airfx.ironoxide5_tilde)
add_airfx_object(tape airfx.ironoxideclassic_tilde)
add_airfx_object(tape airfx.fromtape_tilde)
add_airfx_object(tone-color airfx.busscolors4_tilde)
add_airfx_object(tone-color airfx.channel4_tilde)
add_airfx_object(tone-color airfx.cider_tilde)
add_airfx_object(tone-color airfx.elation_tilde)
add_airfx_object(tone-color airfx.crystal_tilde)
add_airfx_object(tone-color airfx.neverland_tilde)
add_airfx_object(tone-color airfx.luxor_tilde)
add_airfx_object(tone-color airfx.channel9_tilde)
add_airfx_object(tone-color airfx.calibre_tilde)
add_airfx_object(tone-color airfx.apicolypse_tilde)
add_airfx_object(tone-color airfx.precious_tilde)
add_airfx_object(utility airfx.voicetrick_tilde)
add_airfx_object(utility airfx.subsonly_tilde)
add_airfx_object(utility airfx.bitshiftgain_tilde)
add_airfx_object(utility airfx.bitshiftpan_tilde)
add_airfx_object(utility airfx.balanced_tilde)
add_airfx_object(utility airfx.ulawencode_tilde)
add_airfx_object(utility airfx.flipity_tilde)
add_airfx_object(utility airfx.peaksonly_tilde)
add_airfx_object(utility airfx.ulawdecode_tilde)
add_airfx_object(utility airfx.contenthided_tilde)
add_airfx_object(utility airfx.monoam_tilde)
add_airfx_object(utility airfx.monitoring_tilde)
add_airfx_object(utility airfx.purestgain_tilde)
add_airfx_object(utility airfx.edisdim_tilde)
add_airfx_object(utility airfx.rightomono_tilde)
add_airfx_object(utility airfx.hermetrim_tilde)
add_airfx_object(utility airfx.purestfade_tilde)
add_airfx_object(utility airfx.monitoring3_tilde)
add_airfx_object(utility airfx.midside_tilde)
add_airfx_object(utility airfx.leftomono_tilde)
add_airfx_object(utility airfx.monitoring2_tilde)
add_airfx_object(utility airfx.slewonly_tilde)
add_airfx_object(utility airfx.everytrim_tilde)
add_airfx_object(utility airfx.dcvoltage_tilde)
add_airfx_object(utility airfx.golem_tilde)
add_airfx_object(xyz-filters airfx.zbandpass_tilde)
add_airfx_object(xyz-filters airfx.ynotch_tilde)
add_airfx_object(xyz-filters airfx.xnotch_tilde)
add_airfx_object(xyz-filters airfx.xhighpass_tilde)
add_airfx_object(xyz-filters airfx.zlowpass2_tilde)
add_airfx_object(xyz-filters airfx.zregion_tilde)
add_airfx_object(xyz-filters airfx.znotch2_tilde)
add_airfx_object(xyz-filters airfx.ylowpass_tilde)
add_airfx_object(xyz-filters airfx.ynothighpass_tilde)
add_airfx_object(xyz-filters airfx.zhighpass2_tilde)
add_airfx_object(xyz-filters airfx.ybandpass_tilde)
add_airfx_object(xyz-filters airfx.zregion2_tilde)
add_airfx_object(xyz-filters airfx.ynotbandpass_tilde)
add_airfx_object(xyz-filters airfx.znotch_tilde)
add_airfx_object(xyz-filters airfx.zlowpass_tilde)
add_airfx_object(xyz-filters airfx.yhighpass_tilde)
add_airfx_object(xyz-filters airfx.ynotlowpass_tilde)
add_airfx_object(xyz-filters airfx.xregion_tilde)
add_airfx_object(xyz-filters airfx.xbandpass_tilde)
add_airfx_object(xyz-filters airfx.zhighpass_tilde)
add_airfx_object(xyz-filters airfx.xlowpass_tilde)
add_airfx_object(xyz-filters airfx.zbandpass2_tilde)
