[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Isabel Kaspriskie <ikaspriskie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
